--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "version": "0.0.0",
   "title": "Abstracted Birds",
-  "description": "A web interface to manage CCQN{3,4}",
+  "description": "A web interface to manage CCNQ{3,4}",
   "scripts": {
     "prepublish": "grunt build:browser build:couchapp",
     "test": "grunt test"
@@ -37,6 +37,7 @@
     "teacup": "^0.4.2",
     "page": "^1.3.7",
     "superagent": "^0.18.2",
-    "pouchdb": "^3.0.5"
+    "pouchdb": "^3.0.5",
+    "async": "^0.9.0"
   }
 }
