--- a/package.json
+++ b/package.json
@@ -14,30 +14,31 @@
   "author": "Stéphane Alnet <stephane@shimaore.net> (http://shimaore.net/)",
   "devDependencies": {
     "async": "^0.9.0",
-    "browserify": "^5.11.1",
-    "coffeeify": "^0.7.0",
-    "component": "^0.19.9",
+    "browserify": "^8.1.1",
+    "coffeeify": "^1.0.0",
+    "component": "^1.0.2",
     "couchapp": "^0.11.0",
     "deamdify": "^0.1.1",
-    "debowerify": "^0.8.1",
-    "decomponentify": "0.0.3",
+    "debowerify": "^1.2.0",
+    "decomponentify": "^0.1.0",
     "deglobalify": "^0.2.0",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^3.0.1",
+    "grunt-browserify": "^3.3.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-coffee": "^0.11.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-couchapp": "^0.2.1",
-    "grunt-notify": "^0.3.1",
+    "grunt-notify": "^0.4.1",
     "grunt-shell": "^1.1.1",
-    "page": "^1.3.7",
-    "pouchdb": "^3.0.5",
+    "page": "^1.6.0",
+    "pouchdb": "^3.2.1",
     "rfileify": "^1.3.1",
     "rfolderify": "^1.3.0",
-    "superagent": "^0.18.2",
-    "teacup": "^0.4.2"
+    "superagent": "^0.21.0",
+    "superagent-as-promised": "^2.0.0",
+    "teacup": "^1.0.0"
   }
 }
