--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "browser",
     "couchapp"
   ],
-  "version": "0.0.0",
+  "version": "1.0.17",
   "title": "Abstracted Birds",
   "description": "A web interface to manage CCNQ{3,4}",
   "scripts": {
@@ -33,12 +33,14 @@
     "grunt-couchapp": "^0.2.1",
     "grunt-notify": "^0.4.1",
     "grunt-shell": "^1.1.1",
+    "lie": "^2.8.1",
     "page": "^1.6.0",
     "pouchdb": "^3.2.1",
     "rfileify": "^1.3.1",
     "rfolderify": "^1.3.0",
     "superagent": "^0.21.0",
     "superagent-as-promised": "^2.0.0",
-    "teacup": "^1.0.0"
+    "teacup": "^1.0.0",
+    "teacup-camel-to-kebab": "^1.0.0"
   }
 }
