--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "description": "A web interface to manage LCR routes in CCNQ4",
   "scripts": {
     "prepublish": "./node_modules/.bin/grunt build:browser build:couchapp",
-    "test": "./node_modules/.bin/grunt test"
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "Stéphane Alnet <stephane@shimaore.net> (http://shimaore.net/)",
   "devDependencies": {
     "async": "^0.9.0",
+    "bluebird": "^2.9.7",
     "browserify": "^8.1.1",
     "ccnq-ko-rule-entry": "^4.3.1",
+    "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
     "coffeeify": "^1.0.0",
     "component": "^1.0.2",
     "couchapp": "^0.11.0",
@@ -35,6 +38,7 @@
     "grunt-notify": "^0.4.1",
     "grunt-shell": "^1.1.1",
     "lie": "^2.8.1",
+    "mocha": "^2.1.0",
     "page": "^1.6.0",
     "pouchdb": "^3.2.1",
     "rfileify": "^1.3.1",
@@ -46,6 +50,7 @@
     "teacup-databind": "^1.0.1"
   },
   "dependencies": {
+    "debug": "^2.1.1",
     "knockout": "^3.2.0"
   }
 }
