--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "async": "^0.9.0",
     "bluebird": "^2.9.7",
     "browserify": "^8.1.1",
-    "ccnq-ko-rule-entry": "^4.3.1",
+    "ccnq-ko-rule-entry": "^4.4.1",
+    "ccnq-ko-rule-gwlist": "^1.1.3",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
     "coffeeify": "^1.0.0",
