--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "async": "^0.9.0",
     "browserify": "^8.1.1",
-    "ccnq-ko-rule-entry": "^4.3.1",
+    "ccnq-ko-rule-entry": "^4.4.1",
+    "ccnq-ko-rule-gwlist": "^1.1.3",
     "coffeeify": "^1.0.0",
     "component": "^1.0.2",
     "couchapp": "^0.11.0",
