--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "devDependencies": {
     "async": "^0.9.0",
     "browserify": "^8.1.1",
-    "ccnq-ko-rule-entry": "^4.4.1",
-    "ccnq-ko-rule-gwlist": "^1.1.3",
+    "ccnq-ko-rule-entry": "^5.0.0",
+    "ccnq-ko-rule-gwlist": "^2.0.0",
+    "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
     "coffeeify": "^1.0.0",
     "component": "^1.0.2",
     "couchapp": "^0.11.0",
     "deamdify": "^0.1.1",
     "debowerify": "^1.2.0",
+    "debug": "^2.1.1",
     "decomponentify": "^0.1.0",
     "deglobalify": "^0.2.0",
     "grunt": "^0.4.5",
@@ -35,6 +38,7 @@
     "grunt-couchapp": "^0.2.1",
     "grunt-notify": "^0.4.1",
     "grunt-shell": "^1.1.1",
+    "knockout": "^3.2.0",
     "lie": "^2.8.1",
     "page": "^1.6.0",
     "pouchdb": "^3.2.1",
@@ -45,8 +49,5 @@
     "teacup": "^1.0.0",
     "teacup-camel-to-kebab": "^1.0.0",
     "teacup-databind": "^1.0.1"
-  },
-  "dependencies": {
-    "knockout": "^3.2.0"
   }
 }
