--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "title": "Abstracted Birds",
   "description": "A web interface to manage LCR routes in CCNQ4",
   "scripts": {
-    "prepublish": "grunt build:browser build:couchapp",
-    "test": "mocha"
+    "prepublish": "./node_modules/.bin/grunt build:browser build:couchapp",
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "Stéphane Alnet <stephane@shimaore.net> (http://shimaore.net/)",
   "devDependencies": {
